<resources>
    <string name="app_name">Life Linker</string>

    <!-- Names -->
    <string name="player_one">James</string>
    <string name="player_two">John</string>
    <string name="player_three">Barry</string>
    <string name="player_four">Taco</string>
    <string name="opponent">Opponent</string>

    <!-- Life Count -->
    <string name="life_count">20</string>
    <string name="giant_count">30</string>

    <!-- Content Descriptions -->
    <string name="up_button">Up button</string>
    <string name="down_button">Down button</string>

    <!-- Options Menu -->
    <string name="bluetooth_opt">Bluetooth Linker</string>
    <string name="bluetooth_discovery">Discover Device</string>
    <string name="new_game">New Game</string>
    <string name="three_players">Three Players</string>
    <string name="two_players">Two Players</string>
    <string name="two_headed_giant">Two Headed Giant</string>
    <string name="four_players">Four Players</string>

    <!--  DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <!-- Dialog -->
    <string name="userName">Enter New Name</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="name_dialog">Enter Your Name</string>

    <!-- Toasts -->
    <string name="not_connected">Not connected to a device</string>

</resources>
