<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    tools:context="com.firerockwebs.lifelinker.MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:id="@+id/player_one"
            android:layout_marginEnd="150sp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/player_one"
                android:textSize="30sp"
                android:paddingBottom="20dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/player_one_up"
                android:background="@drawable/plus"
                android:contentDescription="@string/up_button"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/player_one_life"
                android:text="@string/life_count"
                android:textSize="40sp"
                android:padding="10dp"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/player_one_down"
                android:background="@drawable/minus"
                android:contentDescription="@string/down_button"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:id="@+id/player_two"
            android:layout_toEndOf="@+id/player_one" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/player_two"
                android:textSize="30sp"
                android:paddingBottom="20dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/player_two_up"
                android:background="@drawable/plus"
                android:contentDescription="@string/up_button"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/player_two_life"
                android:text="@string/life_count"
                android:textSize="40sp"
                android:padding="10dp"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/player_two_down"
                android:background="@drawable/minus"
                android:contentDescription="@string/down_button"/>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
